kubernetes/manifests/rustfs/templates/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: rustfs-network-policy
  namespace: rustfs
spec:
  egress:
  - toEndpoints:
    - {}
  - toFQDNs:
    - matchPattern: '*.amazonaws.com'
    - matchPattern: '*.s3.amazonaws.com'
    - matchName: github.com
    - matchName: raw.githubusercontent.com
    - matchName: registry-1.docker.io
    - matchName: ghcr.io
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: '*'
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: rustfs
  ingress:
  - fromEndpoints:
    - {}
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cloudflare
    - matchLabels:
        io.kubernetes.pod.namespace: victoria-metrics
  - fromEntities:
    - ingress
